fixed menu icon and toggler spacing in mobile header and fixed light background to extend height 100% on mainlayout

--- a/src/components/About.module.scss
+++ b/src/components/About.module.scss
@@ -31,12 +31,6 @@
 }
 
 
-li:hover {
-  // background-color: $moonblue;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 .aboutList li:hover {
   background-color: $moonblue; /* Change to your desired color */
 }
