--- a/src/components/MainLayout.module.scss
+++ b/src/components/MainLayout.module.scss
@@ -48,7 +48,8 @@ footer {
   color: $dark;
   transition: all 400ms;
   width: 100%;
-  height: 100vh;
+  max-width: 100vw;
+  height: 100%;
   background-size: cover;
   background-position: center;
   box-sizing: border-box;
